--- a/src/assets/stocklist.css
+++ b/src/assets/stocklist.css
@@ -5,6 +5,8 @@
   align-items: center;
   background-color: white;
   padding: 2rem 0.5rem;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 @media (min-width: 720px) {
