--- a/src/assets/stocklist.css
+++ b/src/assets/stocklist.css
@@ -1,8 +1,8 @@
 .stock-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-end;
   background-color: white;
   padding: 2rem 0.5rem;
   flex-wrap: wrap;
