--- a/src/assets/styles/stockdetail.css
+++ b/src/assets/styles/stockdetail.css
@@ -13,7 +13,7 @@
   width: 100%;
   box-shadow: 0 10px 15px -3px rgb(248, 248, 248), 0 4px 6px -2px rgb(248, 248, 248);
   border-radius: 14px;
-  margin: 1rem;
+  margin: 1rem 0;
   padding: 0.5rem;
   text-align: center;
 }
