--- a/src/assets/styles/nav.css
+++ b/src/assets/styles/nav.css
@@ -10,6 +10,7 @@
   color: white;
   background-color: #20202a;
   box-shadow: 0 10px 15px -3px rgb(248, 248, 248), 0 4px 6px -2px rgb(248, 248, 248);
+  border-radius: 10px;
 }
 
 @media (min-width: 1000px) {
