--- a/src/assets/styles/filter.css
+++ b/src/assets/styles/filter.css
@@ -1,3 +1,14 @@
 .filter-by-exchange {
-  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  width: 90%;
+  margin: 0 auto;
+  justify-self: center;
+  background-color: #20202a;
+  color: white;
+  padding: 1rem 2rem 1rem 1rem;
+  font-family: 'Merriweather', serif;
+  box-shadow: 0 10px 15px -3px rgb(248, 248, 248), 0 4px 6px -2px rgb(248, 248, 248);
+  border-radius: 10px;
+  text-transform: none;
 }
